# -DEV---CBC_to_Excel

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  arborescence_12.01.26_124720.txt  mkdocs.yml  pyinstaller.spec  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release-exe.yml
core/: __init__.py  categories.py  config.py  excel_styles.py  main.py  naming.py  steps.py  trie.py  updater.py
core/resources/: __init__.py  categories.csv
data/: Compte courant extraits BRUT FDD 2018 à 2023.csv  categories.csv  categories.txt  categories_depenses.csv  categories_test.csv
data/in_csv/: __Cpt_courant_FDD_18_to_25_normalized_utf8.csv  __Mastercard_FDD_23_to_25_normalized_utf8.csv  __TOTAL Extraits cpt courant (18-25)_Mastercard(23-25).xlsx  export_BE41732062192310_20251214_1356.csv  export_BE50732047041718_20241230_1428.csv  export_BE50732047041718_20250220_1431.csv  export_BE50732047041718_20250220_1432.csv  export_Mastercard Business Blue CBC_20250220_1432 (1).csv  export_Mastercard Business Blue CBC_20250220_1432.csv
data/out_xlsx/: 2025.01.18_[02.07.2018-31.12.2024]_FDD.xlsx  2025.02.20_[2.01-31.12(2024)]_FDD.xlsx  FDD.[2.01-30.12(2024)]_2024.12.30.xlsx
doc/: Doc de travail sur le traitement des csv CBC.xlsx  Logique de travail.txt  Réflexions et Résumé.txt  _OLD version_all-in-one_fct_nettoyage_csv.py
docs/: api.md  design-notes.md  development.md  getting-started.md  index.md
tests/: test_categories.py  test_cli.py  test_naming.py  test_trie.py
